--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <option value="dark">Dark</option>
             <option value="neon">Neon</option>
             <option value="retro">Retro</option>
+            <option value="picture">Logo</option>
         </select>
     </header>
     <script src="app.js"></script>
