--- a/tickets.html
+++ b/tickets.html
@@ -19,7 +19,9 @@
     <main>
         <div id="ticket-options">
             <p>🎫 Standard Ticket: €10</p>
-            <button onclick="addToCart('Standard Ticket', 10)">Add to Cart</button>
+            <button onclick="addToCart(3, 'ticket')">Add to Cart</button>
+            <p>🎫 VIP Ticket: €25</p>
+            <button onclick="addToCart(4, 'ticket')">Add to Cart</button>
         </div>
     </main>
     <script src="app.js"></script>
