--- a/shop.html
+++ b/shop.html
@@ -18,11 +18,7 @@
     </header>
     <main>
         <div id="shop-items">
-            <div class="item">
-                <img src="assets/shirt.png" alt="90s Party T-Shirt">
-                <p>🎽 90s Party T-Shirt - €20</p>
-                <button onclick="addToCart('90s Party T-Shirt', 20)">Add to Cart</button>
-            </div>
+            <!-- Dynamically filled by app.js -->
         </div>
     </main>
     <script src="app.js"></script>
