--- a/tickets.html
+++ b/tickets.html
@@ -18,10 +18,7 @@
     </header>
     <main>
         <div id="ticket-options">
-            <p>🎫 Standard Ticket: €10</p>
-            <button onclick="addToCart(3, 'ticket')">Add to Cart</button>
-            <p>🎫 VIP Ticket: €25</p>
-            <button onclick="addToCart(4, 'ticket')">Add to Cart</button>
+            <!-- Dynamically filled by app.js -->
         </div>
     </main>
     <script src="app.js"></script>
