--- a/cart.html
+++ b/cart.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <ul id="cart-items"></ul>
-        <p id="total">Total: €0</p>
+        <p id="total">Totaal: €0</p>
         <button id="checkout-btn" onclick="checkout()">Checkout with PayPal</button>
     </main>
     <script src="app.js"></script>
