--- a/index.html
+++ b/index.html
@@ -1,15 +1,39 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <link id="theme-stylesheet" rel="stylesheet" href="styles-dark.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome "Back to the 90's</title>
+    <link rel="stylesheet" href="styles-dark.css">
 </head>
 <body>
+
     <header>
-        <h1>🎉 Welcome to the 90s Party!</h1>
+        <h1>Welcome "Back to the 90's</h1>
         <nav>
-            <a href="index.html">Home</a>
             <a href="shop.html">Shop</a>
             <a href="tickets.html">Tickets</a>
             <a href="cart.html">Cart</a>
         </nav>
     </header>
-    <script src="app.js"></script>
+
+    <main>
+        <!-- Hero Section with Image -->
+        <section class="hero">
+            <img src="https://i.ibb.co/m5NSx43Y/poster.png" alt="Our Store Banner" class="hero-img">
+            <h2>Steun de zaak, koop met een doel!</h2>
+            <p>Elke aankoop draagt ​​bij aan het financieren van kankeronderzoek en patiëntenondersteuning.</p>
+            <a href="shop.html" class="btn">Shop Now</a>
+        </section>
+
+        <!-- About Kom op tegen Kanker -->
+        <section class="cancer-support">
+            <h2>Wij steunen <span style="color: #ffcc00;">Kom op tegen Kanker</span></h2>
+            <p>We steunen met trots <strong>Kom op tegen Kanker</strong>, een Belgische organisatie die zich inzet voor kankeronderzoek, patiëntenondersteuning en bewustwording. Een deel van onze opbrengsten gaat rechtstreeks naar dit doel.</p>
+            <p>Doe met ons mee en maak het verschil. Uw steun helpt in de strijd tegen kanker.</p>
+            <img src="https://i.ibb.co/FbysrsFG/downloads.png" alt="Kom op tegen Kanker" class="support-logo">
+        </section>
+    </main>
+
 </body>
+</html>
