--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome "Back to the 90's</title>
+    <title>Welcome Back to the 90's</title>
     <link rel="stylesheet" href="styles-dark.css">
 </head>
 <body>
 
     <header>
-        <h1>Welcome "Back to the 90's</h1>
+        <h1>Welcome Back to the 90's</h1>
         <nav>
             <a href="shop.html">Shop</a>
             <a href="tickets.html">Tickets</a>
