--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <h1>Welcome Back to the 90's</h1>
         <nav>
+            <a href="index.html">Home</a>
             <a href="shop.html">Shop</a>
             <a href="tickets.html">Tickets</a>
             <a href="cart.html">Cart</a>
